hphp/hack/test/typecheck/sealed/stricter_sealed/sealed_enum.php.rust_elab.exp
File "sealed_enum.php", line 5, characters 3-10:
Enum `B` in sealed allowlist for `E`, but does not use `E` (Typing[4445])
  File "sealed_enum.php", line 12, characters 6-6:
  Definition is here
